--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,27 @@
         android:theme="@style/Theme.PersonaAdsMobileAndroidExamples"
         tools:targetApi="31">
 
-        <!--    Sample apiKey: XXX_api_key_2_XXX-->
+        <!-- Sample apiKey: XXX_api_key_2_XXX -->
         <meta-data
             android:name="io.persona3.android.pms.ads.API_KEY"
-            android:value="XXX_api_key_2_XXX"/>
+            android:value="XXX_api_key_2_XXX" />
         <meta-data
             android:name="io.persona3.android.pms.ads.ENVIRONMENT"
-            android:value="development"/>
+            android:value="development" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.PersonaAdsMobileAndroidExamples">
+            android:theme="@style/Theme.PersonaAdsMobileAndroidExamples" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivityJava"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
