Updated to version 0.0.6

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -65,5 +66,5 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    implementation("io.persona3.android.pms:mobile-ad-sdk:0.0.3")
+    implementation("io.persona3.android.pms:mobile-ad-sdk:0.0.6")
 }
